--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
+    <title>Work Day Scheduler Module 5 Challenge</title>
   </head>
 
   <body>
